fix main section mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -207,7 +207,7 @@ h3 {
   .subscribe {
     height: 853px;
     max-height: 853px;
-    padding: 200px 20px;
+    padding: 200px 0;
   }
 }
 @media (max-width: 768px) {
