--- a/src/scss/subscribe.scss
+++ b/src/scss/subscribe.scss
@@ -12,7 +12,7 @@
   @media (max-width: $mobile-width) {
     height: 853px;
     max-height: 853px;
-    padding: 200px 20px;
+    padding: 200px 0;
   }
 
   &__title {
